# pynime

./: .gitignore  README.md  example.py  pyproject.toml  scraper.py  secret.txt  setup.py
pynimeapi/: __init__.py  data_classes.py  pynime.py  schedule.py
pynimeapi/classes/: __init__.py  datatype.py
pynimeapi/downloader/: __init__.py  http_downloader.py  pysmartdl.py
pynimeapi/streaming/: __init__.py  extractor.py  playlist_handler.py  playlist_parser.py  url_handler.py
